discussion/kv_engine/155607/155607_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Defrag control sleep

Change-Id: I78336b50a00955f243b264adba9d7cd6a73d964b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-11 12:16:29.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 12:34:06.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36755/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/defragmenter.cc(231): error C2039: "getFragmentationPercD": is not a member of "cb::FragmentationStats" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36755/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31416/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/defragmenter.cc:231:38:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31416/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9787/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.h:14:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include "spdlog/common.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9787/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10:
error: "spdlog/logger.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9787/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10438/ : FAILURE

Compile error at [2021-06-11T12:21:39.987Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/defragmenter.cc:231:38:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10438/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11362/ : FAILURE

Compile error at [2021-06-11T12:19:02.223Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/defragmenter.cc:231:38:
error: ?const class cb::FragmentationStats? has no member named ?getFragmentationPercD?; did you mean ?getFragmentationPerc??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11362/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11511/ : FAILURE

Compile error at [2021-06-11T12:19:15.044Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/defragmenter.cc:231:38:
error: ?const class cb::FragmentationStats? has no member named ?getFragmentationPercD?; did you mean ?getFragmentationPerc??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11511/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11788/ : FAILURE

Compile error at [2021-06-11T12:21:06.382Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/defragmenter.cc:231:38:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11788/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19373/ : FAILURE

Compile error at [2021-06-11T12:23:45.416Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/defragmenter.cc:231:38:
error: no member named "getFragmentationPercD" in "cb::FragmentationStats"; did you mean "getFragmentationPerc"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19373/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8381/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/304/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
